--- a/src/routes/loginPage/index.css
+++ b/src/routes/loginPage/index.css
@@ -3,4 +3,20 @@
   align-items: center;
   justify-content: center;
   height: 100%;
+  background-image: url(../../assets/img/backgroup.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+.login-form {
+  position: absolute;
+  left: 60%;
+  top: 30%;
+  border-radius: 30px;
+  box-shadow: 3px 3px 1.5px 1.5px #374774;
+  background-color: rgba(255, 255, 255, 0.9);
+  width: 400px;
+  height: 400px;
+  display: flex;
+  align-items: center;
 }
