--- a/src/routes/loginPage/index.less
+++ b/src/routes/loginPage/index.less
@@ -1,6 +1,27 @@
-.login-page{
+.login-page {
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100%;
+    background-image: url(../../assets/img/backgroup.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+
+}
+
+.login-form {
+    position: absolute;
+    left: 60%;
+    top:30%;
+    border-radius: 30px;
+    box-shadow: 3px 3px 1.5px 1.5px rgb(55, 71, 116);
+
+    background-color: rgba(255, 255, 255, 0.9);
+    width: 400px;
+    height: 400px;
+    display: flex;
+    //   flex-direction:column;
+    align-items: center;
+
 }
